added ability to delete taska and toods
