# svc/handlers/taskhandlers/task.go
@@ -92,3 +92,24 @@ func (ctx Context) CreateTaskTodo(params operations.CreateTaskTodoParams) middle
 
 	return operations.NewCreateTaskTodoOK().WithPayload("success")
 }
+
+// DeleteTask deletes the given task and associated todos
+func (ctx Context) DeleteTask(params operations.DeleteTaskParams) middleware.Responder {
+	id, _ := strconv.Atoi(params.TaskID)
+
+	task := models.Task{
+		ID: int64(id),
+	}
+
+	_ := ctx.DB.Find(&task).Error
+
+	var todos []*models.Todo
+
+	ctx.DB.Where("task_id = ?", params.TaskID).Find(&todos)
+
+	ctx.DB.Delete(&todos)
+
+	ctx.DB.Delete(&task)
+
+	return operations.NewDeleteTodoOK().WithPayload("Success")
+}
