# svc/restapi/operations/tasker_api.go
@@ -50,6 +50,9 @@ func NewTaskerAPI(spec *loads.Document) *TaskerAPI {
 		CreateTodoHandler: CreateTodoHandlerFunc(func(params CreateTodoParams) middleware.Responder {
 			return middleware.NotImplemented("operation CreateTodo has not yet been implemented")
 		}),
+		DeleteTaskHandler: DeleteTaskHandlerFunc(func(params DeleteTaskParams) middleware.Responder {
+			return middleware.NotImplemented("operation DeleteTask has not yet been implemented")
+		}),
 		DeleteTodoHandler: DeleteTodoHandlerFunc(func(params DeleteTodoParams) middleware.Responder {
 			return middleware.NotImplemented("operation DeleteTodo has not yet been implemented")
 		}),
@@ -107,6 +110,8 @@ type TaskerAPI struct {
 	CreateTaskTodoHandler CreateTaskTodoHandler
 	// CreateTodoHandler sets the operation handler for the create todo operation
 	CreateTodoHandler CreateTodoHandler
+	// DeleteTaskHandler sets the operation handler for the delete task operation
+	DeleteTaskHandler DeleteTaskHandler
 	// DeleteTodoHandler sets the operation handler for the delete todo operation
 	DeleteTodoHandler DeleteTodoHandler
 	// GetPingHandler sets the operation handler for the get ping operation
@@ -193,6 +198,9 @@ func (o *TaskerAPI) Validate() error {
 	}
 	if o.CreateTodoHandler == nil {
 		unregistered = append(unregistered, "CreateTodoHandler")
+	}
+	if o.DeleteTaskHandler == nil {
+		unregistered = append(unregistered, "DeleteTaskHandler")
 	}
 	if o.DeleteTodoHandler == nil {
 		unregistered = append(unregistered, "DeleteTodoHandler")
@@ -312,6 +320,10 @@ func (o *TaskerAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/todo"] = NewCreateTodo(o.context, o.CreateTodoHandler)
+	if o.handlers["DELETE"] == nil {
+		o.handlers["DELETE"] = make(map[string]http.Handler)
+	}
+	o.handlers["DELETE"]["/task/{taskId}"] = NewDeleteTask(o.context, o.DeleteTaskHandler)
 	if o.handlers["DELETE"] == nil {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
